--- a/deploy/example/pod.yaml
+++ b/deploy/example/pod.yaml
@@ -4,7 +4,7 @@ metadata:
   labels:
     project: test
   name: tmp-shell
-  namespace: mnp-test
+  namespace: mnp-test-test-48
 spec:
   containers:
     - args:
