--- a/deploy/octopus/templates/serviceaccount.yaml
+++ b/deploy/octopus/templates/serviceaccount.yaml
@@ -1,8 +1,9 @@
-{{- if .Values.serviceAccount.create -}}
+{{- if .Values.serviceAccount.create }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: octopus-agent
+  namespace: octopus
   labels:
     {{- include "octopus.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
@@ -11,11 +12,12 @@ metadata:
   {{- end }}
 {{- end }}
 ---
-{{- if .Values.serviceAccount.create -}}
+{{- if .Values.serviceAccount.create }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: octopus-sync
+  namespace: octopus
   labels:
     {{- include "octopus.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
