--- a/deploy/octopus-broker/Chart.yaml
+++ b/deploy/octopus-broker/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: octopus
+name: octopus-broker
 description: A Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
@@ -22,8 +22,3 @@ version: 0.1.0
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
 appVersion: "1.16.0"
-
-dependencies:
-  - name: common
-    version: 2.2.2
-    repository: https://charts.bitnami.com/bitnami
